# examples

./: .gitignore  LICENSE  README.md
ai/: .gitignore  activation_functions_non_linearity.ipynb  aiml_overview.md  classification.md  computational_graph.ipynb  feature_engineering.md  generalization.md  glossary.md  gradient_descent.md  loss_and_cost_functions.md  ml_workflow.md  model_evaluation.md  nn_backpropagation.ipynb  nn_backpropagation_computational_graph.ipynb  nn_forward_pass_impl.ipynb  nn_forward_propagation.ipynb  nn_neurons_and_layers.ipynb  nn_single_neuron.ipynb  nn_training_inference.ipynb  regression.md
ai/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
ai/agentic/a2a/a2a_mcp/: README.md  agent_executor.py  agent_runner.py  fx_agent.py  fx_rate_mcp_server.py  host.py  mcp_server_config.json  pyproject.toml
ai/agentic/a2a/a2a_mcp/.well-known/: agent.json
ai/labs/: linear_regression_scikit_learn.ipynb  regularization.ipynb
aws/: .gitignore  env.sh
aws/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post_create.sh
aws/cdk/: .gitignore  aliases.sh
aws/ec2/: Dockerfile  ec2_userdata.yml  ec2_userdata_simple.yml  simple_autoscaling.py  single_win_instance.py
aws/go_sdk/: .gitignore  go.work  go.work.sum
aws/lambda/: ec2_auto_shutdown.py  stack_scheduled_delete.yml
aws/rds/: read_replica.py  (+1 more)
math/: algebra_basics.md  derivative_matrices.ipynb  derivatives.md  euler_number.ipynb  euler_number.md  katex.html  statistics.md  vectors_and_matrices.md
python/: .gitignore
shell/: random_password.py
(+158 files in other folders)
